# easy-db-rust

./: .gitignore  Cargo.toml  README.md
examples/: full_system.rs  school_client.rs  school_server.rs
src/: lib.rs
tests/: integration_tests.rs
